# slurmforge

./: .gitignore  .importlinter  CITATION.cff  CONTRIBUTING.md  README.md  RUN_RECORD_CONTRACT.md  SECURITY.md  pyproject.toml
.claude/: settings.local.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: .bug_report.md.swp  bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: config.md  internals.md  operations.md  quickstart.md  record-contract.md
docs/records/: artifacts.md  planning.md  runtime.md  status.md  submission.md
slurmforge/: RUN_RECORD_CONTRACT.md  pyproject.toml
slurmforge/tests/: _support.py  conftest.py  test_checkpoints.py  test_gpu_estimator.py  test_installed_package.py  test_launcher.py  test_planning.py  test_replay.py  test_sweep.py  test_templating.py  test_train_modes.py  test_train_outputs.py
src/slurmforge/: __init__.py  control_job_contract.py  control_paths.py  defaults.py  errors.py  example_configs.py  field_options.py  gate_task_map_contract.py  identity.py  launcher.py  overrides.py  record_fields.py  release_policy_contract.py  root_paths.py  starter_catalog.py  starter_projects.py  submission_paths.py  (+4 more)
tests/: _support.py  conftest.py  support.py  test_argparse_introspect.py  test_artifact_sync.py  test_config.py  test_contracts.py  test_dispatch.py  test_examples_cli.py  test_execution_status.py  test_gpu_budget.py  test_init.py  test_installed_package.py  test_launcher.py  test_models.py  test_planning.py  test_replay.py  test_repo_hygiene.py  test_retry.py  test_run_plan_executor.py  test_run_record.py  test_runtime.py  test_slurm_dependencies.py  test_storage.py  test_storage_e2e.py  test_storage_runtime_helpers.py  test_templating.py  test_text_safety.py
tools/: README.md  render_config_docs.py  render_docs.py
(+1003 files in other folders)
