[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "slurmforge"
dynamic = ["version"]
description = "Experiment orchestration toolkit for Slurm-based training and evaluation workflows."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
  {name = "Xin Li", email = "seanxinlee@gmail.com"},
]
maintainers = [
  {name = "Xin Li", email = "seanxinlee@gmail.com"},
]
dependencies = [
  "PyYAML>=6.0",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: System :: Distributed Computing",
]

[project.urls]
Homepage = "https://github.com/Sean-XinLi/slurmforge"
Repository = "https://github.com/Sean-XinLi/slurmforge"
Issues = "https://github.com/Sean-XinLi/slurmforge/issues"
Changelog = "https://github.com/Sean-XinLi/slurmforge/releases"

[project.optional-dependencies]
dev = [
  "import-linter>=2.0",
  "packaging>=24.0",
  "pytest>=9.0",
  "ruff"
]

[project.scripts]
sforge = "slurmforge.launcher:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "slurmforge.identity.__version__"}

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["slurmforge", "slurmforge.*"]

[tool.setuptools.package-data]
slurmforge = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-p", "no:cacheprovider"]
